start of transition to hibernate search 6